# forward-rs

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
notebooks/: assortative.py  divergence.py  divergent.py  inversion.py  inversion_assortative.py  neutral.py  one_deme.py  single_barrier.py  two_traits.py
scripts/: examples.nf  inversion_assortative.nf
src/: inversion.rs  lib.rs
