[package]
name = "forward-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.59", features = ["derive"] }
indicatif = "0.18.4"
rand = { version = "0.9.2", features = ["small_rng"] }
rand_distr = "0.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tskit = { version = "0.15.0-alpha.4", features = ["derive"], git = "https://github.com/tskit-dev/tskit-rust" }
